third_party/move/tools/move-package-manifest/tests/dev-addresses/invalid-dev-address-wildcard.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [dev-addresses]
6 | addr1 = "_"
  |         ^^^ Hex characters are invalid: Invalid character '_' at position 63
  |
